--- a/resources/js/components/Layout.module.css
+++ b/resources/js/components/Layout.module.css
@@ -1,10 +1,10 @@
 .Layout {
-    height: 100vh;
+    min-height: 100vh;
+    height: 100%;
     display: flex;
     flex-direction: column;
     font-family: 'Roboto', sans-serif;
-    background-image: url('/public/imgbg.jpg');
-    background: #0e2231;
+    background: url('/imgbg.jpg');
 }
 
 .Layout main {
