--- a/resources/js/components/Layout.module.css
+++ b/resources/js/components/Layout.module.css
@@ -5,6 +5,7 @@
     flex-direction: column;
     font-family: 'Roboto', sans-serif;
     background: url('/imgbg.jpg');
+    background: #393939;
 }
 
 .Layout main {
