--- a/resources/js/components/UI/Button/Button.module.css
+++ b/resources/js/components/UI/Button/Button.module.css
@@ -1,3 +1,15 @@
 .Button {
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 16px;
+    color: #FFFFFF;
+    background: #F2523A;
+    border-radius: 10px;
+    padding: 17px 32px;
+    min-width: 168px;
+}
 
+.Button.secondary {
+    background: #B9B5B4;
+    border-radius: 10px;
 }
