--- a/resources/js/components/UI/Button/Button.module.css
+++ b/resources/js/components/UI/Button/Button.module.css
@@ -29,7 +29,22 @@
     border: 0;
 }
 
-.Button.widget{
+.Button.addListSidebar {
+    display: block;
+    background: transparent;
+    padding: 0;
+    border: 0;
+    font-weight: 300;
+    font-size: 16px;
+    line-height: 16px;
+    color: #B9B5B4;
+}
+
+.Button.addListSidebar:hover {
+    color: #FFFFFF;
+}
+
+.Button.widget {
     color: #8A8A8A;
     padding: 0;
     border: none;
