--- a/resources/js/components/UI/Input/Input.module.css
+++ b/resources/js/components/UI/Input/Input.module.css
@@ -26,3 +26,13 @@
     padding: 5px;
     margin-right: 20px;
 }
+
+.Input[type='radio'] {
+    visibility: hidden;
+    width: 50px;
+    height: 50px;
+    margin: 0;
+    position: relative;
+    z-index: 5;
+}
+
