--- a/resources/js/components/Auth/ListCard/ColorPicker/ColorPicker.module.css
+++ b/resources/js/components/Auth/ListCard/ColorPicker/ColorPicker.module.css
@@ -1,17 +1,25 @@
 .ColorPicker {
-    display: flex;
-    flex-wrap: wrap;
     max-width: 320px;
     margin: 0 auto 60px auto;
-    justify-content: center;
 }
 
-.ColorPicker > div {
-    margin-left: 15px;
+.ColorPickerBody > div {
+    margin-right: 15px;
     margin-bottom: 15px;
     border-radius: 10px;
     width: 50px;
     height: 50px;
+    position: relative;
+    z-index: 1;
+}
+
+.ColorPickerBody > div:nth-of-type(5) {
+    margin-right: 0;
+}
+
+.ColorPicker > .ColorPickerBody {
+    display: flex;
+    flex-wrap: wrap;
 }
 
 .ColorPicker > p {
@@ -21,4 +29,5 @@
     color: #000000;
     margin-bottom: 30px;
     text-align: center;
+    display: block;
 }
