--- a/resources/js/components/UI/Button/Button.module.css
+++ b/resources/js/components/UI/Button/Button.module.css
@@ -40,6 +40,15 @@
     color: #B9B5B4;
 }
 
+.Button.colorPicker{
+    width: 50px;
+    height: 50px;
+    background: transparent;
+    border: 0;
+    padding: 0;
+    margin: 0;
+}
+
 .Button.addListSidebar:hover {
     color: #FFFFFF;
 }
