--- a/resources/js/components/Auth/ListCard/ListCard.module.css
+++ b/resources/js/components/Auth/ListCard/ListCard.module.css
@@ -15,10 +15,10 @@
 .ListCard .CardHeader{
     font-weight: bold;
     font-size: 36px;
-    line-height: 24px;
     text-align: center;
     color: #000000;
     margin-bottom: 35px;
+    display: block;
 }
 
 .ListCard.Empty {
