исправил удаление желания и добавил удаление листа без модалки

--- a/resources/js/components/Auth/ListCard/ListWidget/ListWidget.module.css
+++ b/resources/js/components/Auth/ListCard/ListWidget/ListWidget.module.css
@@ -1,6 +1,7 @@
 .ListWidget {
     position: absolute;
     right: -125px;
+    top: 0;
     width: 85px;
     display: block;
     background: transparent;
