--- a/resources/js/components/UI/Button/Button.module.css
+++ b/resources/js/components/UI/Button/Button.module.css
@@ -40,6 +40,21 @@
     color: #B9B5B4;
 }
 
+.Button.listWidget{
+    padding: 0;
+    border: none;
+    display: block;
+    background: transparent;
+    width: 85px;
+    min-width: unset;
+    font-weight: 300;
+    font-size: 12px;
+    line-height: 14px;
+    text-align: center;
+    color: #ECECEC;
+    margin-bottom: 30px;
+}
+
 .Button.colorPicker {
     width: 50px;
     height: 50px;
