--- a/resources/js/components/Auth/ListCard/ColorPicker/ColorPicker.module.css
+++ b/resources/js/components/Auth/ListCard/ColorPicker/ColorPicker.module.css
@@ -3,17 +3,30 @@
     margin: 0 auto 60px auto;
 }
 
-.ColorPickerBody > div {
+.ColorPickerBody > .ColorBg {
     margin-right: 15px;
     margin-bottom: 15px;
     border-radius: 10px;
     width: 50px;
     height: 50px;
     position: relative;
-    z-index: 1;
 }
 
-.ColorPickerBody > div:nth-of-type(5) {
+.activeColor {
+    border: 2px solid #D5D5D5;
+    box-sizing: border-box;
+    position: relative;
+}
+
+.activeColor:before {
+    content: '';
+    width: 100%;
+    height: 100%;
+    display: block;
+    background: url('/svg/check-symbol.svg') center no-repeat;
+}
+
+.ColorPickerBody > .ColorBg:nth-of-type(5) {
     margin-right: 0;
 }
 
