--- a/resources/js/components/Auth/Sidebar/Sidebar.module.css
+++ b/resources/js/components/Auth/Sidebar/Sidebar.module.css
@@ -3,6 +3,7 @@
     width: 100%;
     margin-right: 50px;
     padding-top: 50px;
+    position: sticky;
 }
 
 .SidebarHeader {
@@ -22,6 +23,7 @@
     border-bottom: 1px solid #393939;
     padding-bottom: 20px;
     margin-bottom: 30px;
+    cursor: pointer;
 }
 
 .Sidebar .Empty {
