--- a/resources/js/components/UI/Button/Button.module.css
+++ b/resources/js/components/UI/Button/Button.module.css
@@ -29,6 +29,11 @@
     border: 0;
 }
 
+.Button.showNewWish > img {
+    vertical-align: baseline;
+    margin-right: 15px;
+}
+
 .Button.addListSidebar {
     display: block;
     background: transparent;
@@ -40,7 +45,7 @@
     color: #B9B5B4;
 }
 
-.Button.listWidget{
+.Button.listWidget {
     padding: 0;
     border: none;
     display: block;
@@ -55,6 +60,13 @@
     margin-bottom: 30px;
 }
 
+.Button.listWidget > img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 8px;
+}
+
 .Button.colorPicker {
     width: 50px;
     height: 50px;
@@ -63,6 +75,7 @@
     padding: 0;
     margin: 0;
     min-width: unset;
+    transition: 100ms;
 }
 
 .Button.addListSidebar:hover {
@@ -79,7 +92,11 @@
     min-width: unset;
 }
 
-.Button.share{
+.Button.widget:not(:last-of-type) {
+    margin-bottom: 10px;
+}
+
+.Button.share {
     background: #2A61A1;
     border-radius: 5px;
 }
