--- a/resources/js/components/UI/Input/Input.module.css
+++ b/resources/js/components/UI/Input/Input.module.css
@@ -15,16 +15,21 @@
     color: #8A8A8A;
 }
 
+.Input::placeholder {
+    font-weight: 300;
+    font-size: 14px;
+    color: #8A8A8A;
+}
+
 .Input:focus {
     box-shadow: none;
     outline: none;
 }
 
-.Input[type='file'] {
-    width: 110px;
-    height: 110px;
-    padding: 5px;
-    margin-right: 20px;
+label > .Input[type='file'] {
+    visibility: hidden;
+    width: 0;
+    height: 0;
 }
 
 .Input.inputHeader {
