--- a/resources/js/components/Auth/ListPreview/ListPreview.module.css
+++ b/resources/js/components/Auth/ListPreview/ListPreview.module.css
@@ -13,4 +13,26 @@
     border-radius: 15px;
     background: #FFFFFF;
     padding: 64px 106px 58px 106px;
+    text-align: center;
+}
+
+.ListPreviewBody > img {
+    margin-bottom: 50px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100px;
+    height: 100px;
+}
+
+.ListPreviewBody > p {
+    font-weight: 300;
+    font-size: 20px;
+    line-height: 23px;
+    text-align: center;
+    color: #000000;
+    max-width: 220px;
+    margin-bottom: 50px;
+    margin-left: auto;
+    margin-right: auto;
 }
