обновление времени при изменение листа, разные эффекты

--- a/resources/js/components/Auth/ListCard/ListCard.module.css
+++ b/resources/js/components/Auth/ListCard/ListCard.module.css
@@ -6,6 +6,7 @@
     background: darkred;
     border-radius: 15px;
     position: relative;
+    transition: background 135ms cubic-bezier(.4,0,.2,1);
 }
 
 .ListCard > .ListCardBody {
