--- a/resources/js/components/Auth/ListCard/WishList/WishItem/WishItem.module.css
+++ b/resources/js/components/Auth/ListCard/WishList/WishItem/WishItem.module.css
@@ -1,7 +1,7 @@
 .WishItem {
     display: flex;
     max-width: 480px;
-    padding: 20px 10px;
+    padding: 20px 10px 20px 0;
     border-bottom: 1px solid #F0F0F0;
     position: relative;
 }
@@ -10,8 +10,13 @@
     width: 100%;
 }
 
+.WishItem:last-of-type{
+    margin-bottom: 30px;
+}
+
 .WishItem > img {
     padding: 5px;
+    padding-left: 0;
     margin-right: 20px;
     width: 110px;
     min-width: 110px;
