ограничение url по длине и названия желания

--- a/resources/js/components/Auth/ListCard/WishList/WishItem/WishItem.module.css
+++ b/resources/js/components/Auth/ListCard/WishList/WishItem/WishItem.module.css
@@ -39,4 +39,9 @@
     color: #BABABA;
     display: block;
     margin-bottom: 25px;
+    text-decoration: none;
+}
+
+.WishItem a:hover{
+    text-decoration: underline;
 }
