--- a/resources/js/components/Auth/ListCard/WishList/WishItem/WishItem.module.css
+++ b/resources/js/components/Auth/ListCard/WishList/WishItem/WishItem.module.css
@@ -10,7 +10,7 @@
     width: 100%;
 }
 
-.WishItem:last-of-type{
+.WishItem:last-of-type {
     margin-bottom: 30px;
 }
 
@@ -21,6 +21,18 @@
     width: 110px;
     min-width: 110px;
     height: 110px;
+}
+
+.WishItemImg {
+    padding: 5px;
+    padding-left: 0;
+    margin-right: 20px;
+    width: 110px;
+    min-width: 110px;
+    height: 110px;
+    object-fit: cover;
+    border-radius: 3px;
+    background-repeat: no-repeat;
 }
 
 .WishItem .Title {
@@ -42,6 +54,6 @@
     text-decoration: none;
 }
 
-.WishItem a:hover{
+.WishItem a:hover {
     text-decoration: underline;
 }
