--- a/resources/js/components/Auth/ListCard/WishList/WishItem/WishItem.module.css
+++ b/resources/js/components/Auth/ListCard/WishList/WishItem/WishItem.module.css
@@ -28,11 +28,12 @@
     padding-left: 0;
     margin-right: 20px;
     width: 110px;
-    min-width: 110px;
+    max-width: 110px;
     height: 110px;
     object-fit: cover;
     border-radius: 3px;
-    background-repeat: no-repeat;
+    background-position: center !important;
+    background-repeat: no-repeat !important;
 }
 
 .WishItem .Title {
