--- a/resources/js/components/Auth/Authorization.module.css
+++ b/resources/js/components/Auth/Authorization.module.css
@@ -10,6 +10,33 @@
     max-width: 720px;
 }
 
+.AuthVk iframe {
+    margin-top: -94px;
+    margin-left: -244px;
+}
+
+.AuthVkBtn {
+    background: #5181b8;
+    padding: 5px;
+    border-radius: 5px;
+    display: inline-block;
+    overflow: hidden;
+    width: 30px;
+    height: 30px;
+    margin-left: 20px;
+    vertical-align: bottom;
+}
+
+.AuthVk {
+    margin-left: auto;
+    margin-right: auto;
+    width: 20px;
+    height: 25px;
+    display: inline-block;
+    overflow: hidden;
+    vertical-align: middle;
+}
+
 .Auth > div > h1 {
     text-align: center;
 }
