--- a/resources/js/components/Auth/ListPreview/ListPreview.module.css
+++ b/resources/js/components/Auth/ListPreview/ListPreview.module.css
@@ -16,6 +16,41 @@
     text-align: center;
 }
 
+.ListPreviewError {
+    text-align: center;
+    max-width: 690px;
+    width: 100%;
+    padding: 10px;
+    background: transparent;
+    border-radius: 15px;
+    position: relative;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.ListPreviewError img {
+    margin-bottom: 68px;
+    margin-top: 30px;
+}
+
+.ListPreviewError p:first-of-type {
+    font-weight: 300;
+    font-size: 48px;
+    line-height: 24px;
+    text-align: center;
+    color: #FFFFFF;
+    margin-bottom: 50px;
+}
+
+.ListPreviewError p {
+    font-weight: bold;
+    font-size: 24px;
+    line-height: 24px;
+    text-align: center;
+    color: #FFFFFF;
+    margin-bottom: 30px;
+}
+
 .ListPreviewHeader {
     font-weight: bold;
     font-size: 36px;
