--- a/resources/js/components/Auth/ListCard/WishList/WishItem/WishItem.module.css
+++ b/resources/js/components/Auth/ListCard/WishList/WishItem/WishItem.module.css
@@ -43,6 +43,7 @@
     color: #000000;
     padding-top: 25px;
     margin-bottom: 10px;
+    text-align: left;
 }
 
 .WishItem a {
@@ -53,6 +54,7 @@
     display: block;
     margin-bottom: 25px;
     text-decoration: none;
+    text-align: left;
 }
 
 .WishItem a:hover {
