--- a/resources/js/components/Auth/ListCard/WishList/WishItem/WishItem.module.css
+++ b/resources/js/components/Auth/ListCard/WishList/WishItem/WishItem.module.css
@@ -31,9 +31,11 @@
     max-width: 110px;
     height: 110px;
     object-fit: cover;
-    border-radius: 3px;
     background-position: center !important;
     background-repeat: no-repeat !important;
+    background-size: cover;
+    border: 1px solid whitesmoke;
+    border-radius: 10px;
 }
 
 .WishItem .Title {
