--- a/resources/js/components/Auth/Authorization.module.css
+++ b/resources/js/components/Auth/Authorization.module.css
@@ -12,7 +12,7 @@
 
 .AuthVk iframe {
     margin-top: -94px;
-    margin-left: -244px;
+    margin-left: -216px;
 }
 
 .AuthVkBtn {
@@ -28,9 +28,10 @@
 }
 
 .AuthVk {
+    position: relative;
     margin-left: auto;
     margin-right: auto;
-    width: 20px;
+    width: 16px;
     height: 25px;
     display: inline-block;
     overflow: hidden;
