--- a/resources/js/components/UI/Modal/Modal.module.css
+++ b/resources/js/components/UI/Modal/Modal.module.css
@@ -5,7 +5,7 @@
     top: 0;
     width: 100%;
     height: 100%;
-    overflow: auto;
+    overflow: hidden;
     background: rgba(40, 40, 40, 0.2);
     backdrop-filter: blur(15px);
 }
