--- a/resources/js/components/Auth/ListCard/WishList/WishItem/WishItem.module.css
+++ b/resources/js/components/Auth/ListCard/WishList/WishItem/WishItem.module.css
@@ -33,7 +33,7 @@
     object-fit: cover;
     background-position: center !important;
     background-repeat: no-repeat !important;
-    background-size: cover;
+    background-size: cover !important;
     border: 1px solid whitesmoke;
     border-radius: 10px;
 }
