--- a/resources/js/components/Auth/ListCard/ColorPicker/ColorPicker.module.css
+++ b/resources/js/components/Auth/ListCard/ColorPicker/ColorPicker.module.css
@@ -23,6 +23,7 @@
     width: 100%;
     height: 100%;
     display: block;
+    position: absolute;
     background: url('/svg/check-symbol.svg') center no-repeat;
 }
 
