--- a/resources/js/components/Layout.module.css
+++ b/resources/js/components/Layout.module.css
@@ -12,3 +12,11 @@
     flex-direction: column;
     flex-grow: 1;
 }
+
+@media screen
+and (max-width: 768px) {
+    .Layout main {
+        padding-left: 25px;
+        padding-right: 25px;
+    }
+}
