--- a/resources/js/components/Navigation/Header/Header.module.css
+++ b/resources/js/components/Navigation/Header/Header.module.css
@@ -4,3 +4,16 @@
     width: 100%;
     text-align: center;
 }
+
+@media screen
+and (max-width: 768px) {
+    .Header{
+        padding-top: 30px;
+        padding-bottom: 25px;
+    }
+
+    .Header svg {
+        height: 45px;
+        width: 78px;
+    }
+}
