--- a/resources/js/components/Auth/Authorization.module.css
+++ b/resources/js/components/Auth/Authorization.module.css
@@ -31,7 +31,10 @@
 }
 
 .AuthVk:before {
-    content: 'ВК';
+    content: '';
+    background-image: url("/images/vk.svg");
+    background-repeat: no-repeat;
+    background-position-x: center;
     position: absolute;
     width: 100%;
     height: 100%;
@@ -79,6 +82,26 @@
     height: 40px;
     cursor: pointer;
     color: #fff;
+    font-size: 17px;
+    position: relative;
+    vertical-align: bottom;
+}
+
+.Auth .fbLogin:before {
+    content: '';
+    background-image: url("/images/fb.svg");
+    background-repeat: no-repeat;
+    background-position-x: center;
+    position: absolute;
+    background-size: 40%;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    bottom: 0;
+    margin: auto;
+    top: 18%;
+    z-index: 0;
+    color: white;
 }
 
 .authContentHeaderMobile {
@@ -140,6 +163,12 @@ and (max-width: 768px) {
 
     .AuthVk:before {
         top: 71%;
+    }
+
+    .Container > div {
+        width: 100%;
+        max-width: 100%;
+        display: block;
     }
 }
 
