--- a/resources/js/components/Auth/ListCard/WishList/WishItem/WishWidget/WishWidget.Module.css
+++ b/resources/js/components/Auth/ListCard/WishList/WishItem/WishWidget/WishWidget.Module.css
@@ -4,6 +4,21 @@
     padding: 12px 0;
     width: 35px !important;
     position: absolute;
-    right: -45px;
+    right: -35px;
     top: 25px;
+    display: none;
+}
+
+@media screen
+and (max-width: 768px) {
+    .WishWidget {
+        background: #F5F5F5;
+        border-radius: 5px;
+        padding: 2px 0;
+        width: 22px !important;
+        position: absolute;
+        right: 0;
+        top: 10px;
+        display: block;
+    }
 }
