--- a/resources/js/components/Auth/ListPreview/ListPreview.module.css
+++ b/resources/js/components/Auth/ListPreview/ListPreview.module.css
@@ -105,3 +105,60 @@
     margin-left: auto;
     margin-right: auto;
 }
+
+@media screen
+and (max-width: 768px) {
+    .ListPreviewHeader {
+        font-weight: bold;
+        font-size: 24px;
+        line-height: 24px;
+        text-align: center;
+        color: #FFFFFF;
+        width: 100%;
+        box-sizing: border-box;
+        max-width: 100%;
+        margin-left: auto;
+        margin-right: auto;
+        margin-bottom: 20px;
+    }
+
+    .ListPreviewParagraph {
+        font-weight: 300;
+        font-size: 14px;
+        line-height: 24px;
+        text-align: center;
+        color: #FFFFFF;
+        margin-bottom: 20px;
+    }
+
+    .ListPreview {
+        max-width: 100%;
+        width: 100%;
+        box-sizing: border-box;
+        padding: 5px;
+    }
+
+    .ListPreviewBody {
+        padding: 23px 20px 20px 20px;
+    }
+
+    .ListPreviewTime {
+        font-weight: 300;
+        font-size: 14px;
+        line-height: 24px;
+        text-align: center;
+        color: #B9B5B4;
+        margin-top: 20px;
+    }
+
+    .ListPreviewError p:first-of-type {
+        font-size: 24px;
+        margin-bottom: 30px;
+    }
+
+    .ListPreviewError p {
+        font-size: 18px;
+        margin-bottom: 20px;
+    }
+
+}
