--- a/resources/js/components/UI/LoaderSpinner/LoaderSpinner.module.css
+++ b/resources/js/components/UI/LoaderSpinner/LoaderSpinner.module.css
@@ -3,8 +3,8 @@
     z-index: 100;
     left: 0;
     top: 0;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     overflow: auto;
     background: rgba(40, 40, 40, 0.2);
     backdrop-filter: blur(15px);
@@ -16,4 +16,13 @@
     width: 630px;
     padding: 10px;
     border-radius: 15px;
+}
+
+@media screen
+and (max-width: 768px) {
+    .LoaderSpinner .LoaderSpinnerBody{
+        width: 80%;
+        margin: 60% auto;
+        box-sizing: border-box;
+    }
 }
