--- a/resources/js/components/Auth/ListCard/WishList/WishItem/WishItem.module.css
+++ b/resources/js/components/Auth/ListCard/WishList/WishItem/WishItem.module.css
@@ -1,6 +1,7 @@
 .WishItem {
     display: flex;
-    max-width: 480px;
+    max-width: 100%;
+    width: 100%;
     padding: 20px 10px 20px 0;
     border-bottom: 1px solid #F0F0F0;
     position: relative;
