--- a/resources/js/components/Auth/Sidebar/Sidebar.module.css
+++ b/resources/js/components/Auth/Sidebar/Sidebar.module.css
@@ -99,6 +99,22 @@ and (max-width: 768px) {
         display: block;
         font-weight: 300;
         font-size: 12px;
+    }
+
+    .Sidebar > ul > li.active > a {
+        font-weight: bold;
+        font-size: 18px;
+        line-height: 24px;
+        color: #FFFFFF;
+        margin-bottom: 8px;
+        display: block;
+    }
+
+    .Sidebar > ul > li.active > span {
+        display: block;
+        font-weight: 300;
+        font-size: 12px;
+        line-height: 24px;
         color: #B9B5B4;
     }
 
