--- a/resources/js/components/Auth/ListCard/WishList/WishItem/WishItem.module.css
+++ b/resources/js/components/Auth/ListCard/WishList/WishItem/WishItem.module.css
@@ -7,7 +7,7 @@
     position: relative;
 }
 
-.WishItem:hover div:last-of-type{
+.WishItem:hover div:last-of-type {
     display: block;
 }
 
@@ -77,7 +77,18 @@ and (max-width: 768px) {
         height: 70px;
     }
 
-    .WishItem{
+    .WishItemImgMobile {
+        width: 110px;
+        height: 110px;
+        padding: 5px;
+        margin-left: auto;
+        margin-right: auto;
+        margin-bottom: 17px;
+        display: block;
+        min-width: 110px;
+    }
+
+    .WishItem {
         width: 100%;
     }
 
