--- a/resources/js/components/Auth/ListCard/ListWidget/ListWidget.module.css
+++ b/resources/js/components/Auth/ListCard/ListWidget/ListWidget.module.css
@@ -14,10 +14,14 @@
 @media screen
 and (max-width: 768px) {
     .ListWidget {
-        left: 9%;
         bottom: -90px;
         display: flex;
         margin-bottom: 0;
         top: unset;
+        right: 0;
+        width: fit-content;
+        margin-left: auto;
+        margin-right: auto;
+        left: 0;
     }
 }
