--- a/resources/js/components/UI/Button/Button.module.css
+++ b/resources/js/components/UI/Button/Button.module.css
@@ -30,15 +30,15 @@
     transition: 100ms;
 }
 
-.Button.showNewWish:hover{
+.Button.showNewWish:hover {
     color: #F2523A;
 }
 
-.Button.showNewWish:hover svg path{
+.Button.showNewWish:hover svg path {
     fill: #F2523A;
 }
 
-.Button.showNewWish svg path{
+.Button.showNewWish svg path {
     transition: 100ms;
 }
 
@@ -121,7 +121,7 @@
     border: 0px solid #D5D5D5;
 }
 
-.Button.colorPicker:hover{
+.Button.colorPicker:hover {
     border: 2px solid #D5D5D5;
 }
 
@@ -200,9 +200,10 @@ and (max-width: 768px) {
         margin-bottom: 40px;
     }
 
-    .Button.colorPicker:hover{
+    .Button.colorPicker:hover {
         border: none;
     }
+
     .Button.colorPicker {
         width: 32px;
         height: 32px;
@@ -226,6 +227,10 @@ and (max-width: 768px) {
     .Button.widget svg {
         height: 12px;
         width: 12px;
+    }
+
+    .Button.listWidget:nth-of-type(2) {
+        margin-right: 0;
     }
 
     .Button.listWidget {
